--- a/src/App.css
+++ b/src/App.css
@@ -14,21 +14,18 @@
     outline: none;
 }
 
-.img{
-    max-width: 300px ;
-}
+
 .rounded{
     border-radius: 15px;
 }
-.img-card{
-    width: 50px;
-    border-radius: 50%;
-}
+
 .btn-card{
+    width: 100px;
     border-radius: 10px;
     border: 2px solid #122ba9;
     padding: 3px 5px;
     cursor: pointer;
+    transition: all 3s ease;
 }
 
 .article-card{
